# containrs

./: .cbindgen.toml  .gitignore  .rustfmt.toml  Cargo.toml  Cross.toml  Makefile  OWNERS  README.md  build.rs  crates.js  search-index.js  settings.html  source-files.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  setup
.github/workflows/: ci.yml  gh-pages.yml
common/: all.html  enum.NamespaceType.html  index.html  sidebar-items.js  struct.Namespace.html
common/capability/: enum.Capability.html  index.html  sidebar-items.js  struct.Capabilities.html  struct.CapabilityIter.html
common/seccomp/: index.html
common/unix_stream/: index.html  sidebar-items.js  struct.NoneConnectInfo.html  struct.UnixStream.html
container/: all.html  index.html  sidebar-items.js
container/container/: enum.ContainerState.html  index.html  sidebar-items.js  struct.ContainerStats.html  trait.Container.html
container/oci_runtime/: enum.CheckpointArgs.html  enum.CreateArgs.html  enum.EventsArgs.html  enum.ExecArgs.html  enum.FormatArgs.html  enum.GlobalArgs.html  enum.KillArgs.html  enum.ListArgs.html  enum.LogFormatArgs.html  enum.ManageCgroupsModeArgs.html  enum.OCIRuntimeBuilderError.html  enum.PsArgs.html  enum.RestoreArgs.html  enum.RootlessArgs.html  enum.RunArgs.html  enum.SpecArgs.html  enum.Subcommand.html  enum.UpdateArgs.html  index.html  sidebar-items.js  struct.OCIRuntime.html  struct.OCIRuntimeBuilder.html
crates/common/: Cargo.toml
crates/common/src/: lib.rs  seccomp.rs
crates/container/: Cargo.toml
crates/container/src/: conmon.rs  lib.rs  oci_runtime.rs
crates/container/src/container/: local.rs  mod.rs
crates/ffi/: Cargo.toml  build.rs
crates/ffi/src/: lib.rs  log.rs
crates/ffi/src/network/: mod.rs
crates/image/: Cargo.toml
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/network/src/cni/: config.rs  exec.rs  iptables.rs  mod.rs  netlink.rs  plugin.rs  port.rs
crates/oci-image-spec/: Cargo.toml
crates/sandbox/: Cargo.toml
crates/sandbox/src/: error.rs  lib.rs  pinned.rs  pinns.rs
crates/server/: Cargo.toml
crates/services/: Cargo.toml  build.rs
crates/services/src/: error.rs  lib.rs
crates/services/src/cri/: cri_service.rs  mod.rs
crates/services/src/cri/api/: mod.rs  runtime.v1alpha2.rs
crates/services/src/cri/image_service/: image_fs_info.rs  image_status.rs  list_images.rs  mod.rs  pull_image.rs  remove_image.rs
crates/services/src/cri/runtime_service/: attach.rs  container_stats.rs  container_status.rs  create_container.rs  exec.rs  exec_sync.rs  list_container_stats.rs  list_containers.rs  list_pod_sandbox.rs  mod.rs  pod_sandbox_status.rs  port_forward.rs  remove_container.rs  remove_pod_sandbox.rs  reopen_container_log.rs  run_pod_sandbox.rs  start_container.rs  status.rs  stop_container.rs  stop_pod_sandbox.rs  update_container_resources.rs  update_runtime_config.rs  version.rs
crates/services/src/server/: config.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: default_key_value_storage.rs  lib.rs  memory_key_value_storage.rs
ffi/: all.html  index.html
image/: all.html  index.html
implementors/sandbox/: trait.Pod.js
implementors/storage/: trait.KeyValueStorage.js
implementors/strum/: trait.IntoEnumIterator.js
network/: all.html  enum.NetworkBuilderError.html  index.html  sidebar-items.js  struct.Network.html  struct.NetworkBuilder.html  trait.PodNetwork.html
network/cni/: enum.CNIBuilderError.html  enum.CNIStateBuilderError.html  enum.WatcherMessage.html  index.html  sidebar-items.js  struct.CNI.html  struct.CNIBuilder.html  struct.CNIState.html  struct.CNIStateBuilder.html
proto/: criapi.proto
sandbox/: all.html  index.html  sidebar-items.js  struct.LinuxNamespaces.html  struct.Sandbox.html  struct.SandboxBuilder.html  struct.SandboxConfig.html  struct.SandboxConfigBuilder.html  struct.SandboxContext.html  struct.SandboxContextBuilder.html  struct.SandboxState.html  struct.SecurityConfig.html  struct.SecurityConfigBuilder.html  trait.Pod.html
sandbox/error/: enum.SandboxError.html  index.html  sidebar-items.js  type.Result.html
sandbox/pinned/: index.html  sidebar-items.js  struct.PinnedSandbox.html
sandbox/pinns/: enum.LogLevel.html  index.html  sidebar-items.js  struct.Pinns.html  struct.PinnsBuilder.html
server/: all.html  fn.main.html  index.html
services/: all.html  index.html  sidebar-items.js
services/error/: enum.ServiceError.html  index.html  sidebar-items.js
services/server/: enum.LogScope.html  index.html  sidebar-items.js  struct.Config.html  struct.Server.html
src/: capability.rs  config.rs  cri_service.rs  criapi.rs  error.rs  image_service.rs  lib.rs  lock_map.rs  main.rs  runtime.rs  runtime_service.rs  seccomp.rs  server.rs  unix_stream.rs
src/common/: capability.rs.html  lib.rs.html  seccomp.rs.html  unix_stream.rs.html
src/container/: conmon.rs.html  lib.rs.html  oci_runtime.rs.html
src/criapi/: mod.rs  runtime.v1alpha2.rs
src/ffi/: error.rs  error.rs.html  ffi.h  lib.rs.html  log.rs  log.rs.html  mod.rs
src/image/: lib.rs.html
src/image_service/: image_fs_info.rs  image_status.rs  list_images.rs  mod.rs  pull_image.rs  remove_image.rs
src/kubernetes/: mod.rs
src/network/: cni.rs  lib.rs.html  mod.rs
src/oci/: conmon.rs  mod.rs  oci_runtime.rs
src/oci_spec/: mod.rs  runtime.rs
storage/: all.html  index.html  sidebar-items.js  trait.KeyValueStorage.html
tests/: Cargo.toml  all.html  common.rs  e2e.rs  index.html  integration.rs
tests/cni/: 99-loopback.conf
tests/integration_tests/: cni.rs  mod.rs  run_pod_sandbox.rs
tests/integration_tests/kubernetes/: mod.rs
tests/integration_tests/kubernetes/cri/: run_pod_sandbox.rs  version.rs
tests/integration_tests/network/: mod.rs
tests/integration_tests/network/cni/: mod.rs  port.rs
tests/src/: common.rs  lib.rs
tests/src/criapi/: mod.rs  runtime.v1alpha2.rs
tests/src/e2e/: mod.rs
tests/src/integration_tests/: mod.rs
tests/src/integration_tests/network/cni/: config.rs  port.rs
tests/src/integration_tests/services/cri/: run_pod_sandbox.rs  version.rs
(+210 files in other folders)
