[package]
name = "cri"
version = "0.1.0"
authors = [
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
]
edition = "2018"
description = "Container Runtime library for Kubernetes (CRI) and friends"
documentation = "https://docs.rs/cri"
readme = "README.md"
homepage = "https://github.com/cri-o/cri"
repository = "https://github.com/cri-o/cri"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[lib]
crate-type = ["rlib", "staticlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
anyhow = "1.0.33"
async-trait = "0.1.40"
bitflags = "1.2.1"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
crossbeam-channel = "0.5.0"
derive_builder = { git = "https://github.com/colin-kiegel/rust-derive-builder" }
dyn-clone = "1.0.3"
env_logger = "0.8.1"
futures = "0.3.7"
futures-util = "0.3.7"
getset = "0.1.1"
ipnetwork = "0.17.0"
lazy_static = "1.4.0"
libc = "0.2.80"
log = { version = "0.4.11", features = ["serde", "std"] }
nix = "0.19.0"
notify = { version = "5.0.0-pre.3", features = ["serde"] }
prost = "0.6.1"
rmp-serde = "0.14.4"
rtnetlink = "0.5.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
sled = "0.34.4"
strum = { version = "0.19.5", features = ["derive"] }
tokio = { version = "0.3.0", features = ["full"] }
tonic = "0.3.1"
which = "4.0.2"

[build-dependencies]
anyhow = "1.0.33"
cbindgen = "0.15.0"
tonic-build = "0.3.1"

[dev-dependencies]
ctor = "0.1.16"
tempfile = "3.1.0"
tokio-test = "0.3.0"
tower = "0.3.1"
