[package]
name = "containrs"
version = "0.1.0"
authors = [
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
]
edition = "2018"
description = "General purpose container library"
documentation = "https://docs.rs/containrs"
readme = "README.md"
homepage = "https://github.com/cri-o/containrs"
repository = "https://github.com/cri-o/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[lib]
crate-type = ["rlib", "staticlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
anyhow = "1.0.38"
async-stream = "0.3.0"
async-trait = "0.1.42"
bitflags = "1.2.1"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
crossbeam-channel = "0.5.0"
derive_builder = { git = "https://github.com/colin-kiegel/rust-derive-builder" }
dyn-clone = "1.0.4"
env_logger = "0.8.3"
futures = "0.3.12"
futures-util = "0.3.13"
getset = "0.1.1"
ipnetwork = "0.17.0"
lazy_static = "1.4.0"
libc = "0.2.98"
log = { version = "0.4.14", features = ["serde", "std"] }
nix = "0.20.0"
notify = { version = "5.0.0-pre.5", features = ["serde"] }
prost = "0.7.0"
rmp-serde = "0.15.4"
rtnetlink = "0.7.0"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.62"
sled = "0.34.6"
strum = { version = "0.20.0", features = ["derive"] }
tokio = { version = "1.2.0", features = ["full"] }
tonic = "0.4.0"
which = "4.0.2"

[build-dependencies]
anyhow = "1.0.38"
cbindgen = "0.17.0"
tonic-build = "0.4.0"

[dev-dependencies]
ctor = "0.1.19"
tempfile = "3.2.0"
tokio-test = "0.4.0"
tower = { version = "0.4.4", features = ["util"] }
