[package]
name = "containrs"
version = "0.1.0"
authors = [
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
]
edition = "2018"
description = "General purpose container library"
documentation = "https://docs.rs/containrs"
readme = "README.md"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[lib]
crate-type = ["rlib", "staticlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
anyhow = "1.0.43"
async-stream = "0.3.2"
async-trait = "0.1.51"
bitflags = "1.3.2"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
crossbeam-channel = "0.5.1"
derive_builder = "0.10.2"
dyn-clone = "1.0.4"
env_logger = "0.9.0"
futures = "0.3.17"
futures-util = "0.3.17"
getset = "0.1.1"
ipnetwork = "0.18.0"
lazy_static = "1.4.0"
libc = "0.2.101"
log = { version = "0.4.14", features = ["serde", "std"] }
nix = "0.22.0"
netlink-packet-route = "0.7.1"
notify = { version = "5.0.0-pre.13", features = ["serde"] }
prost = "0.8.0"
rmp-serde = "0.15.5"
rtnetlink = "0.8.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
sled = "0.34.6"
strum = { version = "0.21.0", features = ["derive"] }
tokio = { version = "1.11.0", features = ["full"] }
tonic = "0.5.2"
sysctl = "0.4.2"
which = "4.2.2"

[build-dependencies]
anyhow = "1.0.43"
cbindgen = "0.20.0"
tonic-build = "0.5.2"

[dev-dependencies]
ctor = "0.1.21"
tempfile = "3.2.0"
tokio-test = "0.4.2"
tower = { version = "0.4.8", features = ["util"] }
uuid = { version = "0.8.2", features = ["v4"] }
