[package]
name = "tests"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dev-dependencies]
anyhow = "1.0.44"
ctor = "0.1.21"
getset = "0.1.1"
env_logger = "0.9.0"
ipnetwork = "0.18.0"
log = { version = "0.4.14", features = ["serde", "std"] }
network = { path = "../crates/network" }
nix = "0.22.0"
prost = "0.8.0"
tempfile = "3.2.0"
tokio = { version = "1.12.0", features = ["full"] }
tonic = "0.5.2"
tower = { version = "0.4.8", features = ["util"] }
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.2.2"
