[package]
name = "tests"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dev-dependencies]
anyhow = "1.0.66"
ctor = "0.1.26"
getset = "0.1.2"
env_logger = "0.9.3"
ipnetwork = "0.20.0"
log = { version = "0.4.17", features = ["serde", "std"] }
network = { path = "../crates/network" }
nix = "0.25.0"
prost = "0.11.2"
tempfile = "3.3.0"
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.8.2"
tower = { version = "0.4.13", features = ["util"] }
uuid = { version = "1.2.2", features = ["v4"] }
which = "4.3.0"
