[package]
name = "container"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.53"
derive_builder = "0.11.1"
dyn-clone = "1.0.5"
getset = "0.1.2"
log = { version = "0.4.16", features = ["serde", "std"] }
oci-spec = { version = "0.5.5", features = ["runtime"] }
serde = { version = "1.0.136", features = ["derive"] }
strum = { version = "0.24.0", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }

[dev-dependencies]
which = "4.2.5"
