[package]
name = "container"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
derive_builder = "0.11.2"
dyn-clone = "1.0.9"
getset = "0.1.2"
log = { version = "0.4.17", features = ["serde", "std"] }
oci-spec = { version = "0.5.8", features = ["runtime"] }
serde = { version = "1.0.147", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.23.1", features = ["full"] }

[dev-dependencies]
which = "4.3.0"
