[package]
name = "ffi"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["cargo", "derive", "env", "wrap_help"] }
env_logger = "0.10.0"
libc = "0.2.137"
log = { version = "0.4.17", features = ["serde", "std"] }
strum = { version = "0.24.1", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.66"
cbindgen = "0.24.3"
