[package]
name = "network"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
anyhow = "1.0.44"
async-trait = "0.1.51"
crossbeam-channel = "0.5.1"
derive_builder = "0.10.2"
dyn-clone = "1.0.4"
futures = "0.3.17"
futures-util = "0.3.17"
getset = "0.1.1"
ipnetwork = "0.18.0"
log = { version = "0.4.14", features = ["serde", "std"] }
nix = "0.23.0"
notify = { version = "5.0.0-pre.12", features = ["serde"] }
netlink-packet-route = "0.7.1"
rtnetlink = "0.8.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
strum = { version = "0.21.0", features = ["derive"] }
storage = { path = "../storage" }
sandbox = { path = "../sandbox" }
sysctl = "0.4.2"
tokio = { version = "1.12.0", features = ["full"] }
which = "4.2.2"

[dev-dependencies]
tempfile = "3.2.0"