[package]
name = "network"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
anyhow = "1.0.56"
async-trait = "0.1.52"
crossbeam-channel = "0.5.4"
derive_builder = "0.11.1"
dyn-clone = "1.0.5"
futures = "0.3.21"
futures-util = "0.3.21"
getset = "0.1.2"
ipnetwork = "0.18.0"
log = { version = "0.4.14", features = ["serde", "std"] }
nix = "0.23.1"
notify = { version = "5.0.0-pre.14", features = ["serde"] }
netlink-packet-route = "0.8.0"
rtnetlink = "0.8.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
strum = { version = "0.24.0", features = ["derive"] }
storage = { path = "../storage" }
sandbox = { path = "../sandbox" }
sysctl = "0.4.4"
tokio = { version = "1.15.0", features = ["full"] }
which = "4.2.5"

[dev-dependencies]
tempfile = "3.3.0"
