[package]
name = "sandbox"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-trait = "0.1.52"
thiserror = "1.0.30"
bitflags = "1.3.2"
common = { path= "../common" }
derive_builder = "0.10.2"
dyn-clone = "1.0.4"
getset = "0.1.2"
tokio = { version = "1.15.0", features = ["process"] }
strum = { version = "0.23.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.2.2"

[dev-dependencies]
anyhow = "1.0.52"
tokio = { version = "1.15.0", features = ["macros"] }
tempfile = "3.2.0"
nix = "0.23.1"
