[package]
name = "sandbox"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
async-trait = "0.1.53"
thiserror = "1.0.30"
bitflags = "1.3.2"
common = { path= "../common" }
derive_builder = "0.11.1"
dyn-clone = "1.0.5"
getset = "0.1.2"
tokio = { version = "1.19.1", features = ["process"] }
strum = { version = "0.24.0", features = ["derive"] }
uuid = { version = "0.8.2", features = ["v4"] }
which = "4.2.5"

[dev-dependencies]
anyhow = "1.0.56"
tokio = { version = "1.19.1", features = ["macros"] }
tempfile = "3.3.0"
nix = "0.23.1"
