[package]
name = "services"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
anyhow = "1.0.53"
async-stream = "0.3.2"
container = { path = "../container" }
derive_builder = "0.10.2"
log = { version = "0.4.14", features = ["serde", "std"] }
oci-spec = { version = "0.5.3", features = ["runtime"] }
prost = "0.9.0"
sandbox = { path = "../sandbox" }
storage = { path = "../storage" }
thiserror = "1.0.30"
tonic = "0.6.2"
# TODO: these dependencies are only needed for the server
# should be moved to the server crate
lazy_static = "1.4.0"
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0.135", features = ["derive"] }
network = { path = "../network" }
nix = "0.23.1"
clap = { git = "https://github.com/clap-rs/clap", features = ["wrap_help"] }
getset = "0.1.2"
strum = { version = "0.23.0", features = ["derive"] }
futures = "0.3.19"
env_logger = "0.9.0"
common = { path="../common" }

[build-dependencies]
anyhow = "1.0.53"
tonic-build = "0.6.2"

[dev-dependencies]
tempfile = "3.3.0"
