[package]
name = "storage"
version = "0.1.0"
edition = "2018"
authors = [
    "Furisto",
    "Mrunal Patel <mrunalp@gmail.com>",
    "Sascha Grunert <mail@saschagrunert.de>",
    "utam0k <k0ma@utam0k.jp>",
]
documentation = "https://docs.rs/containrs"
homepage = "https://github.com/containers/containrs"
repository = "https://github.com/containers/containrs"
license = "Apache-2.0"
keywords = ["runtime", "kubernetes", "cri", "container", "pod"]
categories = ["network-programming", "api-bindings"]

[dependencies]
anyhow = "1.0.66"
getset = "0.1.2"
log = { version = "0.4.17", features = ["serde", "std"] }
rmp-serde = "1.1.1"
serde = { version = "1.0.147", features = ["derive"] }
sled = "0.34.7"

[dev-dependencies]
tempfile = "3.3.0"
